Prometheus-alertmanager-grafana/k8s/grafana-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
    component: core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: grafana
        component: core
    spec:
      containers:
        - name: grafana
          image: grafana/grafana
          # env:
          resources:
            # keep request = limit to keep this container in guaranteed class
            limits:
              cpu: 100m
              memory: 100Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
          - name: grafana-persistent-storage
            mountPath: /var/lib/grafana
          - name: datasource
            mountPath: /etc/grafana/provisioning/datasources/
          - name: dashboard-providers
            mountPath: /etc/grafana/provisioning/dashboards
          - name: dashboards
            mountPath: /var/lib/grafana/dashboards
      volumes:
      - name: grafana-persistent-storage
        emptyDir: {}
      - name: datasource
        configMap:
          name: grafana-datasource
      - name: dashboard-providers
        configMap:
          name: grafana-dashboard-providers
      - name: dashboards
        configMap:
          name: grafana-dashboards
